@@ -13,7 +13,7 @@ Author: Kenneth Benoit [aut, cre],
     Kohei Watanabe [ctb],
     Benjamin Lauderdale [ctb]
 Maintainer: Kenneth Benoit <kbenoit@lse.ac.uk>
-Version: 0.9.3-14
+Version: 0.9.3-15
 Date: 2016-02-10
 Description: A fast, flexible toolset for for the management, processing, and
     quantitative analysis of textual data in R.
